service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: LoadBalancer
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
